--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,23 +2,22 @@ name: CI
 
 on:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  lint-and-test:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -50,18 +49,4 @@ jobs:
         run: python -c "import pw_core; print('pw_core import OK')"
 
       - name: Smoke test: CLI (show last 3 hashes)
-        # Do not fail CI if the hash file doesn't exist
-        run: python password_enforcer_cli.py --show-hashes || true
-
-      - name: Smoke test: Web app factory
-        shell: bash
-        run: |
-          python - <<'PY'
-          try:
-              from password_enforcer_web import create_app
-              app = create_app()
-              assert app is not None, "Flask app was not created"
-              print("web app OK")
-          except Exception as e:
-              raise SystemExit(f"Web app import/create failed: {e}")
-          PY
+        run: python password_enforcer_cli.py --hash-file password_hashes.txt | tail -n 3
